fixed video/text overlap on large screens
- problem occured between 992px-1199px
- switched bootstrap class to col-xl-6 from col-lg-6
- changed margin to center video on screen when on its own row
- unrelated css typo fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@
         background: url('../img/playicon-s.png') , url('../../Mockups/1430746_2f43_2.jpg');
         background-repeat: no-repeat;
         background-position: center;
+        margin: 0 auto;
         overflow:hidden;
         cursor:pointer;
         transition: all .5s;
@@ -340,8 +341,7 @@
           border-color: #ffffff;
       }
 
-      #enroll-button:not([disabled]):not(.disabled).active,
-      .#enroll-button:not([disabled]):not(.disabled):active,
+      #enroll-button:not([disabled]):not(.disabled):active,
       .show>#enroll-button.dropdown-toggle {
           color: #ec5237;
           background-color: #ffffff;
